more formatting changes, some content changes
… plus README and LICENSE updates. website should be ready for public
eye now.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,11 +18,11 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        Where to next?<br>
-        <a href="http://jhu.edu/">JHU</a> | 
-        <a href="http://lifehacker.com/">Lifehacker</a> | 
-        <a href="https://en.wikipedia.org/wiki/Special:Random">Wikipedia</a> | 
-        <a href="http://en.wiktionary.org/wiki/Special:Random">Wiktionary</a> | 
+        where to next?<br>
+        <a href="http://jhu.edu/">jhu</a> | 
+        <a href="http://lifehacker.com/">lifehacker</a> | 
+        <a href="https://en.wikipedia.org/wiki/Special:Random">wikipedia</a> | 
+        <a href="http://en.wiktionary.org/wiki/Special:Random">wiktionary</a> | 
         <a href="http://c.xkcd.com/random/comic/">xkcd</a>
         <!--
         <ul class="social-media-list">
