--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,8 +15,9 @@
     font-weight: 300;
     line-height: 56px;
     /*letter-spacing: -1px; */
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
     float: left;
+    margin-top: $spacing-unit/2;
 
     &,
     &:visited {
@@ -27,15 +28,16 @@
 .site-nav {
     float: right;
     line-height: 56px;
+    margin-top: $spacing-unit/2;
 
     .menu-icon {
         display: none;
     }
 
     .page-link {
-        font-size: 16px;
+        font-size: 20px;
         color: $brand-color;
-        line-height: $base-line-height;
+        /* line-height: $base-line-height; */
 
         // Gaps between nav items, but not on the first one
         &:not(:first-child) {
@@ -165,7 +167,7 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    padding: $spacing-unit 0; 
 }
 
 .page-heading {
