--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,6 +16,7 @@ dl, dd, ol, ul, figure {
 body {
     font-family: $base-font-family;
     font-size: $base-font-size;
+    text-align: justify;
     line-height: $base-line-height;
     font-weight: 300;
     color: $text-color;
