add CV and link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
           <li>{{ site.title }}</li>
           <!--<li><a href="mailto:{{ site.emailLink }}">{{ site.email }}</a></li>-->
           <li>{{ site.email }}</li>
+          <li><a href="files/becker-cv.pdf">CV</a></li>
         </ul>
       </div>
 
