change home page wording and domain name

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
           <li>{{ site.title }}</li>
           <!--<li><a href="mailto:{{ site.emailLink }}">{{ site.email }}</a></li>-->
           <li>{{ site.email }}</li>
-          <li><a href="http://callmenick.net/files/becker-cv.pdf" onclick=”var that=this;_gaq.push(['_trackEvent','Download','PDF',this.href]);setTimeout(function(){location.href=that.href;},200);return false;”>CV</a> (last updated: 2 April, 2015)</li>
+          <li><a href="http://nickbecker.net/files/becker-cv.pdf" onclick=”var that=this;_gaq.push(['_trackEvent','Download','PDF',this.href]);setTimeout(function(){location.href=that.href;},200);return false;”>CV</a> (last updated: 2 April, 2015)</li>
         </ul>
       </div>
 
