--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
           <li>{{ site.title }}</li>
           <!--<li><a href="mailto:{{ site.emailLink }}">{{ site.email }}</a></li>-->
           <li>{{ site.email }}</li>
-          <li><a href="http://nickbecker.net/files/becker-cv.pdf" onclick=”var that=this;_gaq.push(['_trackEvent','Download','PDF',this.href]);setTimeout(function(){location.href=that.href;},200);return false;”>CV</a> (last updated: 2 April, 2015)</li>
+          <li><a class="page-link" href="{{ 'files/becker-cv.pdf' | prepend: site.baseurl }}">CV</a> (last updated: 6 mar, 2016)</li>
         </ul>
       </div>
 
@@ -22,6 +22,7 @@
         where to next?<br>
         <a href="http://jhu.edu/">jhu</a> | 
         <a href="http://lifehacker.com/">lifehacker</a> | 
+        <a href="http://www.npr.org/">npr</a> | 
         <a href="https://en.wikipedia.org/wiki/Special:Random">wikipedia</a> | 
         <a href="http://en.wiktionary.org/wiki/Special:Random">wiktionary</a> | 
         <a href="http://c.xkcd.com/random/comic/">xkcd</a>
